Bug 356810 - date bar scale does not show presence of photos for one date.
Summary: date bar scale does not show presence of photos for one date.
Status: RESOLVED FIXED
Alias: None
Product: kphotoalbum
Classification: Applications
Component: Datebar (show other bugs)
Version: 4.5
Platform: Ubuntu Linux
: NOR minor
Target Milestone: ---
Assignee: KPhotoAlbum Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-12-17 03:06 UTC by lawrence.emke
Modified: 2019-01-12 14:02 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description lawrence.emke 2015-12-17 03:06:26 UTC
Because one day on the date bar has 250 images recorded, a day where on 12 images were taken appears like no images are present. But if I click on that day the images are located.   

Reproducible: Always

Steps to Reproduce:
1.Load a database with 250 or more images on one day
2.Load the data base with a day that only has 3 images. 
3.Try to find the day with only the 3 images by looking at the date bar.

Actual Results:  
can not see any indication of images present when some days have a large number of images

Expected Results:  
Would expect some way to indicate a very low number of images, that would appear different
than days which have no images.

For example: for all days with images the basic color would have a color other than white. And 
then for a day the area would be scaled by two colors indicating the size. So for small number of
images, at least the number would be visible in the basic (non-white) color. 

The work around is to click every day to see if there are any images for that day.
Not great. This is just one nail in the coffin that makes me wonder if I can trust this product.
Or maybe I should go looking for something else.
Comment 1 Johannes Zarl-Zierl 2019-01-11 22:13:23 UTC
Git commit 4367ff4d5d2a3fa664904aabc5782f22f8acd9b3 by Johannes Zarl-Zierl.
Committed on 11/01/2019 at 21:49.
Pushed by johanneszarl into branch 'master'.

Use logarithmic scaling for DateBarWidget.

Using logarithmic scaling, time units with a small number of images no
longer look empty when other time units have a large number of images.

M  +2    -0    ChangeLog
M  +23   -9    DateBar/DateBarWidget.cpp
M  +1    -0    Settings/SettingsData.cpp
M  +1    -0    Settings/SettingsData.h

https://commits.kde.org/kphotoalbum/4367ff4d5d2a3fa664904aabc5782f22f8acd9b3
Comment 2 Johannes Zarl-Zierl 2019-01-12 14:02:45 UTC
Git commit 9d50cb13bc67fef893c3e3e5c1785e6e903991b8 by Johannes Zarl-Zierl.
Committed on 12/01/2019 at 14:01.
Pushed by johanneszarl into branch 'master'.

Use sqrt instead of logarithm for histogram scaling.

As mentioned by Robert, this should be more intuitive than logarithmic
scaling.
Also bundled in this commit (since it doesn't make sense to split this
out): inverted wording in the settings dialog to "Use linear scaling for
histogram". With this wording we can tweak the exact scaling method
without having to come up with a new settings name every time.

M  +1    -1    ChangeLog
M  +5    -5    DateBar/DateBarWidget.cpp
M  +5    -12   Settings/GeneralPage.cpp
M  +1    -2    Settings/GeneralPage.h
M  +4    -4    Settings/SettingsData.cpp
M  +1    -1    Settings/SettingsData.h

https://commits.kde.org/kphotoalbum/9d50cb13bc67fef893c3e3e5c1785e6e903991b8