Use logarithmic scaling for DateBarWidget.

Using logarithmic scaling, time units with a small number of images no
longer look empty when other time units have a large number of images.

BUG: 356810